0.98 update.
Removed json schemas. Replace default game path with relative paths.